--- a/processingv2.html
+++ b/processingv2.html
@@ -419,6 +419,7 @@ table{
             <select id="viewMode">
               <option value="all">All</option>
               <option value="top10">Top 10 priority</option>
+              <option value="notCataloged">Not Cataloged</option>
             </select>
           </div>
         </div>
@@ -477,6 +478,21 @@ table{
         <div class="row generalFixHide">
           <label for="covered">Covered</label>
           <select id="covered"><option>NO</option><option>YES</option></select>
+        </div>
+
+        <div class="row generalFixHide">
+          <label for="minimalCover">Minimal covering</label>
+          <input id="minimalCover" type="checkbox" />
+        </div>
+
+        <div class="row">
+          <label for="paidPrice">Paid price</label>
+          <input id="paidPrice" type="number" min="0" step="0.01" placeholder="0.00" />
+        </div>
+
+        <div class="row">
+          <label for="retailPrice">Retail price</label>
+          <input id="retailPrice" type="number" min="0" step="0.01" placeholder="0.00" />
         </div>
 
         <h3 class="generalFixHide">Context</h3>
@@ -616,6 +632,14 @@ table{
           <label for="orderItemNotes">Item notes</label>
           <input id="orderItemNotes" type="text" placeholder="Notes to carry to processing" />
         </div>
+        <div class="row">
+          <label for="orderItemPaidPrice">Paid price</label>
+          <input id="orderItemPaidPrice" type="number" min="0" step="0.01" placeholder="0.00" />
+        </div>
+        <div class="row">
+          <label for="orderItemRetailPrice">Retail price</label>
+          <input id="orderItemRetailPrice" type="number" min="0" step="0.01" placeholder="0.00" />
+        </div>
         <div class="btnRow">
           <button class="secondary" onclick="addOrderItem()">Add item</button>
         </div>
@@ -628,6 +652,8 @@ table{
                 <th>Barcode</th>
                 <th>Donation</th>
                 <th>Memorial</th>
+                <th>Paid</th>
+                <th>Retail</th>
                 <th>Notes</th>
                 <th>Actions</th>
               </tr>
@@ -786,6 +812,9 @@ table{
         <div class="r-line"><div class="r-left r-sub">Cataloged</div><div class="r-right" id="rCataloged"></div></div>
         <div class="r-line"><div class="r-left r-sub">Spine label</div><div class="r-right" id="rSpine"></div></div>
         <div class="r-line"><div class="r-left r-sub">Covered</div><div class="r-right" id="rCovered"></div></div>
+        <div class="r-line"><div class="r-left r-sub">Minimal cover</div><div class="r-right" id="rMinimalCover"></div></div>
+        <div class="r-line"><div class="r-left r-sub">Paid price</div><div class="r-right" id="rPaidPrice"></div></div>
+        <div class="r-line"><div class="r-left r-sub">Retail price</div><div class="r-right" id="rRetailPrice"></div></div>
 
         <div class="r-rule"></div>
 
@@ -1146,6 +1175,11 @@ table{
     let score = 0;
     const breakdown = [];
 
+    if(it.received !== "YES"){
+      breakdown.push("awaitingReceived");
+      return { score, breakdown };
+    }
+
     if(hasHold(it)){ score += 60; breakdown.push("hold+60"); }
     if(hasAdopted(it)){ score += 35; breakdown.push("adopted+35"); }
     if(isGeneralFix(it)){ score += 25; breakdown.push("generalFix+25"); }
@@ -1213,6 +1247,9 @@ table{
       cataloged: $("cataloged").value,
       spine: $("spine").value,
       covered: $("covered").value,
+      minimalCover: $("minimalCover").checked,
+      paidPrice: $("paidPrice").value,
+      retailPrice: $("retailPrice").value,
       manualDone: $("manualDone").checked,
       fixDetails: $("fixDetails").value.trim(),
       fixDone: $("fixDone").checked,
@@ -1245,6 +1282,9 @@ table{
     $("cataloged").value = it.cataloged || "NO";
     $("spine").value = it.spine || "NO";
     $("covered").value = it.covered || "NO";
+    $("minimalCover").checked = it.minimalCover === true;
+    $("paidPrice").value = it.paidPrice ?? "";
+    $("retailPrice").value = it.retailPrice ?? "";
     $("manualDone").checked = it.manualDone === true;
     $("fixDetails").value = it.fixDetails || "";
     $("fixDone").checked = it.fixDone === true;
@@ -1274,6 +1314,9 @@ table{
     $("cataloged").value = "NO";
     $("spine").value = "NO";
     $("covered").value = "NO";
+    $("minimalCover").checked = false;
+    $("paidPrice").value = "";
+    $("retailPrice").value = "";
     $("manualDone").checked = false;
     $("fixDetails").value = "";
     $("fixDone").checked = false;
@@ -1330,6 +1373,8 @@ table{
     $("orderItemDonation").value = "";
     $("orderItemMemorial").value = "";
     $("orderItemNotes").value = "";
+    $("orderItemPaidPrice").value = "";
+    $("orderItemRetailPrice").value = "";
     orderItems = [];
     renderOrderItems();
   }
@@ -1369,6 +1414,8 @@ table{
     const donated = $("orderItemDonation").value.trim();
     const memorial = $("orderItemMemorial").value.trim();
     const notes = $("orderItemNotes").value.trim();
+    const paidPrice = $("orderItemPaidPrice").value;
+    const retailPrice = $("orderItemRetailPrice").value;
     if(!title && !barcode){
       alert("Enter an item title or barcode.");
       $("orderItemTitle").focus();
@@ -1381,7 +1428,9 @@ table{
       barcode,
       donated,
       memorial,
-      notes
+      notes,
+      paidPrice,
+      retailPrice
     });
     $("orderItemTitle").value = "";
     $("orderItemAuthor").value = "";
@@ -1389,6 +1438,8 @@ table{
     $("orderItemDonation").value = "";
     $("orderItemMemorial").value = "";
     $("orderItemNotes").value = "";
+    $("orderItemPaidPrice").value = "";
+    $("orderItemRetailPrice").value = "";
     renderOrderItems();
   }
 
@@ -1408,6 +1459,8 @@ table{
         <td class="mono">${escapeHTML(item.barcode || "")}</td>
         <td>${escapeHTML(item.donated || "")}</td>
         <td>${escapeHTML(item.memorial || "")}</td>
+        <td class="mono">${escapeHTML(formatMoney(item.paidPrice) || "")}</td>
+        <td class="mono">${escapeHTML(formatMoney(item.retailPrice) || "")}</td>
         <td>${escapeHTML(item.notes || "")}</td>
         <td>
           <div class="actions">
@@ -1441,6 +1494,9 @@ table{
         cataloged: "NO",
         spine: "NO",
         covered: "NO",
+        minimalCover: false,
+        paidPrice: orderItem.paidPrice || "",
+        retailPrice: orderItem.retailPrice || "",
         manualDone: false,
         fixDetails: "",
         fixDone: false,
@@ -1463,6 +1519,8 @@ table{
       base.donated = orderItem.donated || base.donated || "";
       base.memorial = orderItem.memorial || base.memorial || "";
       base.notes = orderItem.notes || base.notes || "";
+      base.paidPrice = orderItem.paidPrice || base.paidPrice || "";
+      base.retailPrice = orderItem.retailPrice || base.retailPrice || "";
       base.orderId = order.id;
       base.orderNumber = order.orderNumber;
       base.updatedAt = new Date().toISOString();
@@ -1501,6 +1559,11 @@ table{
     // Determine statusChangedAt (only if processing status signature changes)
     const newSig = statusSignature(it);
     const prevSig = prev?.statusSig ?? statusSignature(prev || it);
+
+    if(prev){
+      it.orderId = prev.orderId;
+      it.orderNumber = prev.orderNumber;
+    }
 
     if(!prev){
       it.statusSig = newSig;
@@ -1562,11 +1625,15 @@ table{
     $("rCataloged").textContent = it.cataloged;
     $("rSpine").textContent = it.spine;
     $("rCovered").textContent = it.covered;
+    $("rMinimalCover").textContent = it.minimalCover === true ? "✓" : "";
+    $("rPaidPrice").textContent = formatMoney(it.paidPrice);
+    $("rRetailPrice").textContent = formatMoney(it.retailPrice);
 
     if(isGeneralFix(it)){
       $("rCataloged").textContent = it.fixDone === true ? "YES" : "NO";
       $("rSpine").textContent = "N/A";
       $("rCovered").textContent = (it.fixDetails || "").trim() || "N/A";
+      $("rMinimalCover").textContent = "";
     }
 
     const hold = (it.holdName || "").trim();
@@ -1637,6 +1704,10 @@ table{
       items = items.filter(it => !isDone(it));
     }
 
+    if(viewMode === "notCataloged"){
+      items = items.filter(it => it.cataloged !== "YES");
+    }
+
     // Compute scores once for sort + display
     const scored = items.map(it => {
       const p = priorityScore(it);
@@ -1681,6 +1752,9 @@ table{
       if(hasMemorial(it)) flags.push(`<span class="pill">Memorial</span>`);
       if(it.orderNumber) flags.push(`<span class="pill">Order #${escapeHTML(it.orderNumber)}</span>`);
       if(it.manualDone === true) flags.push(`<span class="pill done">Manual done</span>`);
+      if(it.minimalCover === true) flags.push(`<span class="pill">Minimal cover ✓</span>`);
+      if(formatMoney(it.paidPrice)) flags.push(`<span class="pill">Paid ${escapeHTML(formatMoney(it.paidPrice))}</span>`);
+      if(formatMoney(it.retailPrice)) flags.push(`<span class="pill">Retail ${escapeHTML(formatMoney(it.retailPrice))}</span>`);
 
       const slip = (it.slipPrinted === "YES")
         ? `<span class="pill yes">Printed</span>`
@@ -1800,7 +1874,10 @@ table{
       manualDone: item.manualDone === true,
       fixDetails: item.fixDetails || "",
       fixDone: item.fixDone === true,
-      workType: item.workType || "NEW"
+      workType: item.workType || "NEW",
+      minimalCover: item.minimalCover === true,
+      paidPrice: item.paidPrice || "",
+      retailPrice: item.retailPrice || ""
     })) : [];
     const orders = Array.isArray(incoming?.orders) ? incoming.orders.map(order => ({
       ...order,
@@ -1809,7 +1886,9 @@ table{
         author: orderItem.author || "",
         donated: orderItem.donated || "",
         memorial: orderItem.memorial || "",
-        notes: orderItem.notes || ""
+        notes: orderItem.notes || "",
+        paidPrice: orderItem.paidPrice || "",
+        retailPrice: orderItem.retailPrice || ""
       })) : []
     })) : [];
     const bookplateBorders = Array.isArray(incoming?.bookplateBorders) ? incoming.bookplateBorders : [];
@@ -1839,6 +1918,9 @@ table{
         cataloged: "NO",
         spine: "NO",
         covered: "NO",
+        minimalCover: false,
+        paidPrice: "",
+        retailPrice: "",
         manualDone: false,
         fixDetails: "",
         fixDone: false,
@@ -1864,7 +1946,7 @@ table{
   });
 
  // Live sync (receipt only)
- ["barcode","title","author","workType","received","cataloged","spine","covered","holdName","adoptedAmt","bookplate","donated","memorial","itemNotes","manualDone","fixDetails","fixDone"].forEach(id => {
+ ["barcode","title","author","workType","received","cataloged","spine","covered","minimalCover","paidPrice","retailPrice","holdName","adoptedAmt","bookplate","donated","memorial","itemNotes","manualDone","fixDetails","fixDone"].forEach(id => {
     $(id).addEventListener("input", syncReceipt);
     $(id).addEventListener("change", syncReceipt);
   });
